# dagster-snowflake

./: .gitignore  README.md
dagster-dlt-snowflake/: .gitignore  pyproject.toml
dagster-dlt-snowflake/src/dagster_dlt_snowflake/: definitions.py
dagster-dlt-snowflake/src/dagster_dlt_snowflake/defs/assets/: adhoc.py  mongodb.py  movies.py
dagster-dlt-snowflake/src/dagster_dlt_snowflake/defs/jobs/: __init__.py
dagster-dlt-snowflake/src/dagster_dlt_snowflake/defs/partitions/: __init__.py
dagster-dlt-snowflake/src/dagster_dlt_snowflake/defs/schedules/: __init__.py
dagster-dlt-snowflake/src/dagster_dlt_snowflake/defs/sensors/: __init__.py
dagster-dlt-snowflake/src/dagster_dlt_snowflake/sources/mongodb/: helpers.py
dagster-dlt-snowflake/tests/: debug_tables.py
