[project]
name = "dagster_dlt_snowflake"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.10",
    "dagster-cloud>=1.11.10",
    "dagster-dlt>=0.27.10",
    "dagster-embedded-elt>=0.27.10",
    "dagster-snowflake>=0.27.10",
    "dlt[snowflake]>=1.12.1",
    "pymongo>=4.15.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.6.1",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dagster]
module_name = "dagster_dlt_snowflake.definitions"

[tool.dg.project]
root_module = "dagster_dlt_snowflake"
registry_modules = [
    "dagster_dlt_snowflake.components.*",
]


